Make PUT be only an Update and not a Create
